--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
         "laravel-vite-plugin": "^0.7.5",
         "sass": "^1.63.3",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "vue": "^2.5.17"
     }
 }
